Update branch filter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,5 +55,7 @@ workflows:
             - install
             - test
           filters:
+            branches:
+              ignore: /.*/
             tags:
                only: /^v.*/
